<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/add_event"
        style="@style/text_highlight" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/dark_grey_1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_private_sel"
                style="@style/btmfragment_privacybtns"
                android:text="@string/privateSetting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_public_sel"
                style="@style/btmfragment_privacybtns"
                android:text="@string/publicSetting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.78"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            style="@style/btmfragment_optionrow">

            <TextView
                android:id="@+id/title_text"
                style="@style/btmfragment_optionheader"
                android:text="@string/title" />

            <EditText
                android:id="@+id/et_title_dialog"
                style="@style/btmfragment_optioncontent"
                android:layout_toEndOf="@+id/title_text"
                android:textSize="12sp" />

        </RelativeLayout>


        <RelativeLayout
            style="@style/btmfragment_optionrow">

            <TextView
                android:id="@+id/deadline_text"
                style="@style/btmfragment_optionheader"
                android:text="@string/deadline" />

            <Button
                android:id="@+id/btn_deadline"
                style="@style/btmfragment_optioncontent"
                android:layout_toEndOf="@+id/deadline_text"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/default_date"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- style="?android:spinnerDropDownItemStyle" -->

        </RelativeLayout>


        <EditText
            android:id="@+id/et_description_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40sp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/dark_grey_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit_event"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/main_button"
        android:text="@string/submit"
        android:textSize="15sp" />

</LinearLayout>