<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:id="@+id/calendar"
        android:title="Calendar"
        android:icon="@drawable/ic_baseline_calendar_24"/>
    <item android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_profile_24"/>
</menu>