<resources>
    <!-- project mains -->
    <string name="project_name">Scheduler App</string>
    <string name="app_name">eventle</string>

    <string name="firebase_link">https://scheduleapp-3ebb7-default-rtdb.asia-southeast1.firebasedatabase.app</string>
    <string name="firestore_link">gs://scheduleapp-3ebb7.appspot.com</string>

    <string name="Welcome_Message">Welcome,</string>
    <string name="Default_Username">User</string>
    <string name="Default_MemberOneName">Member1</string>
    <string name="Default_MemberTwoName">Member2</string>

    <!-- Date and Days-->
    <string name="DATE_FORMAT">MMM yyyy</string>
...
